fixes project tile formatting issues, tiles no longer get caught on each other and avoids extra whitespace

--- a/css/main.css
+++ b/css/main.css
@@ -148,8 +148,9 @@ nav li a:hover {
   padding: 20px;
 }
 
-.proj li {
-  margin-bottom: 15px;
+#projects li {
+  margin-top: 15px;
+  margin-bottom: 30px;
 }
 
 .proj img {
